welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: Unmatched closing brace '}' ignored here
		case (true,true) => true}
                                        ^SnakeBuggle:7: error: ')' expected but 'case' found.
		case (_,_)	  =>  false
                ^SnakeBuggle:7: error: illegal start of simple expression
		case (_,_)	  =>  false
                                  ^SnakeBuggle:8: error: ';' expected but ')' found.
	})
         ^SnakeBuggle:32: error: expected start of definition
override def run() {
         ^SnakeBuggle:61: error: Unmatched closing brace '}' ignored here
}
^